# demoing

./: Dockerfile  README.md  config.schema.json  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
sample/: README.md  sample.m4a  sample.yaml
src/: cli.py  config.py  ffmpeg_runner.py  ffmpeg_utils.py  ffprobe_utils.py  utils.py
src/pipeline/: audio.py  concat.py  scene.py  video.py
