[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-builder"
dynamic = ["version"]
# version = "0.1.0"
description = "Assemble demo videos from audio, screen recordings, and slides — powered by ffmpeg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
demo = "demo_builder.cli:main"

[tool.setuptools]
packages = ["demo_builder", "demo_builder.pipeline"]
version_scheme = "no-guess-dev"

[tool.setuptools.package-dir]
demo_builder = "src"